--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- metadata -->
+    <title>Virtual Assistant</title>
+    <meta name="description" content="Prototype for my final thesis.">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="https://www.diesdas.digital/assets/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://www.diesdas.digital/assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://www.diesdas.digital/assets/img/favicons/favicon-16x16.png">
+    <link rel="mask-icon" href="https://www.diesdas.digital/assets/img/favicons/safari-pinned-tab.svg" color="#000000"> -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Virtual Assistant">
+    <meta name="application-name" content="Virtual Assistant">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable = no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
