--- a/static/index.html
+++ b/static/index.html
@@ -33,6 +33,16 @@
       </svg>
       <button type="button" class="btn--siri" name="button"></button>
     </main>
+    <a href="#" class="info">
+        <span class="attribute">Title</span>
+        <span class="value">Multimodal User Interfaces for Virtual Assistants</span>
+
+        <span class="attribute">Author</span>
+        <span class="value">Janos Pauer</span>
+
+        <span class="attribute">Supervisor</span>
+        <span class="value">Prof. Andreas Ingerl</span>
+    </a>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
