Lower opacity for last heard word

--- a/static/index.html
+++ b/static/index.html
@@ -33,16 +33,21 @@
       </svg>
       <button type="button" class="btn--siri" name="button"></button>
     </main>
-    <a href="#" class="info">
-        <span class="attribute">Title</span>
-        <span class="value">Multimodal User Interfaces for Virtual Assistants</span>
+    <aside class="info">
+      <button type="button">
+        <span>×</span>
+      </button>
+      <div href="#">
+          <span class="attribute">Title</span>
+          <span class="value">Multimodal User Interfaces for Virtual Assistants</span>
 
-        <span class="attribute">Author</span>
-        <span class="value">Janos Pauer</span>
+          <span class="attribute">Author</span>
+          <span class="value">Janos Pauer</span>
 
-        <span class="attribute">Supervisor</span>
-        <span class="value">Prof. Andreas Ingerl</span>
-    </a>
+          <span class="attribute">Supervisor</span>
+          <span class="value">Prof. Andreas Ingerl</span>
+      </div>
+    </aside>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
