Added callout and space bar control

--- a/static/index.html
+++ b/static/index.html
@@ -32,6 +32,9 @@
 
       </button>
     </aside>
+    <div class="callout">
+      <span>Hold space ⎵ to activate Siri.</span>
+    </div>
     <main>
       <iframe src="http://localhost:8080/" allow="autoplay; fullscreen; microphone *" width="375" height="812" name="app"></iframe>
       <!-- <iframe src="../" allow="autoplay; fullscreen; microphone *" width="375" height="812" name="app"></iframe> -->
